kubernetes/base/auth-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  namespace: vulnbank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      # VULNERABILITY: No securityContext (CWE-250)
      # VULNERABILITY: No resource limits (CWE-770)
      # VULNERABILITY: No readOnlyRootFilesystem
      # VULNERABILITY: Running as root
      containers:
        - name: auth-api
          image: vulnbank/auth-api:latest
          # VULNERABILITY: Using :latest tag (unreproducible)
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: vulnbank
spec:
  # VULNERABILITY: Using LoadBalancer exposes directly to internet
  type: LoadBalancer
  selector:
    app: auth-api
  ports:
    - port: 5000
      targetPort: 5000
