kubernetes/base/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: vulnbank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: vulnbank/frontend:latest
          ports:
            - containerPort: 3000
          # VULNERABILITY: No security context, no resource limits
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: vulnbank
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
