kubernetes/base/payments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  namespace: vulnbank
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      securityContext:
        runAsNonRoot: true
        fsGroup: 65534
      containers:
        - name: payments
          image: vulnbank/payments:1.0.0
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: vulnbank
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
    - port: 8080
      targetPort: 8080
